--- a/InventroyMgtSystem/Areas/Identity/Pages/Account/Login.cshtml
+++ b/InventroyMgtSystem/Areas/Identity/Pages/Account/Login.cshtml
@@ -15,6 +15,7 @@
 
         <!-- Login Form -->
         <form id="account" method="post">
+            <div asp-validation-summary="All" class="text-danger"></div>
             <input type="email" id="login" asp-for="Input.Email" class="fadeIn second" placeholder="username" />
             <br />
             <span asp-validation-for="Input.Email" class="text-danger"></span>
